objects/GenAIGtwyObjRecCitationRef__dlm.object
<CustomObject>
    <fields>
        <fullName>KQ_id__c</fullName>
        <label>Key Qualifier Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_parent__c</fullName>
        <label>Key Qualifier Parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloud__c</fullName>
        <label>Cloud</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feature__c</fullName>
        <label>Feature</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orgId__c</fullName>
        <label>Org Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parent__c</fullName>
        <label>Parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>references__c</fullName>
        <label>References</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rel_1753303845237_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GenAIGtwyObjRecCitationRef_parent_ma_rel</label>
        <referenceTo>GenAIGtwyObjRecord__dlm</referenceTo>
        <relationshipLabel>GenAIGtwyObjRecCitationRef_parent_ma_rel</relationshipLabel>
        <relationshipName>rel_1753303845237_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>